[project]
name = "llm-model-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.5.1",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "safetensors>=0.7.0",
    "transformers>=5.1.0",
]
